--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,3 @@
-<div class="container mx-auto p-4 flex flex-col items-center gap-3">
-  <h1 class="text-3xl font-bold underline">Hello world!</h1>
-  <button class="btn btn-primary">Testing</button>
-  <button class="btn btn-secondary">Click Me</button>
-</div>
+<app-navbar></app-navbar>
+
+<app-home></app-home>
