--- a/src/app/components/about-us/about-us.html
+++ b/src/app/components/about-us/about-us.html
@@ -15,10 +15,10 @@
   </div>
 </div>
 <div class="container mx-auto my-8">
-  <div class="grid grid-cols-4 gap-5 items-center">
-    <div class="rounded-lg order-last shadow-md mr-4">
+  <div class="grid grid-cols-5 gap-5 items-center">
+    <div class="rounded-lg order-last shadow-md mr-4 col-span-2">
       <img
-        class="h-50 w-72 object-cover rounded-lg"
+        class="h-50 w-72 object-fill rounded-lg"
         src="https://img.daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.webp"
         alt="Noticia 1"
       />
@@ -36,10 +36,10 @@
       </div>
     </div>
   </div>
-  <div class="grid grid-cols-4 gap-5 items-center mt-5">
-    <div class="rounded-lg shadow-md mr-4">
+  <div class="grid grid-cols-5 gap-5 items-center mt-5">
+    <div class="rounded-lg shadow-md mr-4 col-span-2">
       <img
-        class="h-50 w-72 object-cover rounded-lg"
+        class="h-50 w-72 object-fill rounded-lg"
         src="https://img.daisyui.com/images/stock/photo-1507358522600-9f71e620c44e.webp"
         alt="Noticia 2"
       />
