--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -1,4 +1,4 @@
-<div class="container my-10 mx-auto">
+<div class="container my-20 mx-auto">
   <div class="hero">
     <div class="hero-content flex-col lg:flex-row-reverse">
       <img src="pc2.png" class="max-w-sm rounded-lg shadow-2xl" />
@@ -20,58 +20,27 @@
   <div class="flex w-full flex-col">
     <div class="divider divider-primary"></div>
   </div>
-  <div class="grid grid-cols-2">
+  <div class="grid grid-cols-2 px-32 my-10">
     <h3 class="text-3xl font-semibold mx-10 text-left my-auto">
       Las empresas confían en nuestras soluciones
     </h3>
     <div class="carousel carousel-vertical rounded-box h-60 w-full">
-      <div class="carousel-item w-full h-1/2">
-        <img
-          src="https://img.daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.webp"
-          class="w-full"
-        />
+      <div class="carousel-item w-full h-full">
+        <img src="hogwarts.png" class="w-full" />
       </div>
-      <div class="carousel-item w-full h-1/2">
-        <img
-          src="https://img.daisyui.com/images/stock/photo-1565098772267-60af42b81ef2.webp"
-          class="w-full"
-        />
+      <div class="carousel-item w-full h-full">
+        <img src="metro.png" class="w-full" />
       </div>
-      <div class="carousel-item w-full h-1/2">
-        <img
-          src="https://img.daisyui.com/images/stock/photo-1572635148818-ef6fd45eb394.webp"
-          class="w-full"
-        />
+      <div class="carousel-item w-full h-full">
+        <img src="2k.png" class="w-full" />
       </div>
-      <div class="carousel-item w-full h-1/2">
-        <img
-          src="https://img.daisyui.com/images/stock/photo-1494253109108-2e30c049369b.webp"
-          class="w-full"
-        />
-      </div>
-      <div class="carousel-item w-full h-1/2">
-        <img
-          src="https://img.daisyui.com/images/stock/photo-1550258987-190a2d41a8ba.webp"
-          class="w-full"
-        />
-      </div>
-      <div class="carousel-item w-full h-1/2">
-        <img
-          src="https://img.daisyui.com/images/stock/photo-1559181567-c3190ca9959b.webp"
-          class="w-full"
-        />
-      </div>
-      <div class="carousel-item w-full h-1/2">
-        <img
-          src="https://img.daisyui.com/images/stock/photo-1601004890684-d8cbf643f5f2.webp"
-          class="w-full"
-        />
+      <div class="carousel-item w-full h-full">
+        <img src="dome.png" class="w-full" />
       </div>
     </div>
   </div>
-  <div class="divider divider-primary"></div>
 
-  <div class="grid gap-4 grid-cols-4">
+  <div class="grid gap-4 mt-10 mx-44 grid-cols-4">
     <div class="card bg-base-100 h-40">
       <div class="card-body text-center">
         <h2 class="font-semibold text-primary text-3xl">3600</h2>
@@ -98,15 +67,16 @@
       </div>
     </div>
   </div>
+  <div class="divider divider-primary"></div>
 
   <div>
-    <h3 class="text-3xl font-semibold text-left my-10">Siempre activos</h3>
-    <div class="flex flex-col gap-5">
+    <h3 class="text-3xl font-semibold my-10 text-center">Siempre activos</h3>
+    <div class="flex flex-col gap-5 px-32">
       <div class="grid grid-cols-4 items-center">
-        <div class="rounded-lg shadow-md mr-4">
+        <div class="rounded-lg mr-4">
           <img
-            class="h-50 w-72 object-cover rounded-lg"
-            src="https://img.daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.webp"
+            class="h-50 w-72 object-fill rounded-lg"
+            src="platform.png"
             alt="Noticia 1"
           />
         </div>
@@ -125,10 +95,10 @@
         </div>
       </div>
       <div class="grid grid-cols-4 items-center">
-        <div class="rounded-lg shadow-md mr-4">
+        <div class="rounded-lg mr-4">
           <img
-            class="h-50 w-72 object-cover rounded-lg"
-            src="https://img.daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.webp"
+            class="h-50 w-72 object-contain rounded-lg"
+            src="startup.png"
             alt="Noticia 2"
           />
         </div>
@@ -147,10 +117,10 @@
         </div>
       </div>
       <div class="grid grid-cols-4 items-center">
-        <div class="rounded-lg shadow-md mr-4">
+        <div class="rounded-lg mr-4">
           <img
-            class="h-50 w-72 object-cover rounded-lg"
-            src="https://img.daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.webp"
+            class="h-50 w-72 object-fill rounded-lg"
+            src="aws.png"
             alt="Noticia 3"
           />
         </div>
