--- a/src/app/components/about-us/about-us.html
+++ b/src/app/components/about-us/about-us.html
@@ -1,7 +1,7 @@
 <div
-  class="hero min-h-72 bg-base-200"
+  class="hero min-h-96 bg-base-200"
   style="
-    background-image: url(https://img.daisyui.com/images/stock/photo-1507358522600-9f71e620c44e.webp);
+    background-image: url('bg.png');
   "
 >
   <div class="hero-overlay"></div>
@@ -14,12 +14,12 @@
     </div>
   </div>
 </div>
-<div class="container mx-auto my-8">
+<div class="container mx-auto my-8 px-40">
   <div class="grid grid-cols-5 gap-5 items-center">
     <div class="rounded-lg order-last shadow-md mr-4 col-span-2">
       <img
-        class="h-50 w-72 object-fill rounded-lg"
-        src="https://img.daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.webp"
+        class="h-64 w-full object-fill rounded-lg"
+        src="mission.png"
         alt="Noticia 1"
       />
     </div>
@@ -39,12 +39,12 @@
   <div class="grid grid-cols-5 gap-5 items-center mt-5">
     <div class="rounded-lg shadow-md mr-4 col-span-2">
       <img
-        class="h-50 w-72 object-fill rounded-lg"
-        src="https://img.daisyui.com/images/stock/photo-1507358522600-9f71e620c44e.webp"
+        class="h-64 w-full object-fill rounded-lg"
+        src="vision.png"
         alt="Noticia 2"
       />
     </div>
-    <div class="col-span-3 card h-50 bg-base-100 shadow-sm">
+    <div class="col-span-3 card h-64 bg-base-100 shadow-sm">
       <div class="card-body">
         <h2 class="card-title">Nuestra misión</h2>
         <div class="divider divider-neutral m-0"></div>
