--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -2,7 +2,7 @@
 <nav class="navbar bg-base-100 shadow-sm">
   <div class="container mx-auto flex justify-between items-center px-4 py-2">
     <!-- Logo -->
-    <a routerLink="/inicio" class="btn btn-ghost px-0 h-20">
+    <a routerLink="/" class="btn btn-ghost px-0 h-20">
       <img src="image.png" alt="Company Logo" class="h-full md:h-16" />
     </a>
 
