--- a/src/app/components/team/team.html
+++ b/src/app/components/team/team.html
@@ -111,9 +111,9 @@
     </ul>
   </section>
 
-  <section class="container mx-auto px-20 my-8">
-    <h2 class="text-4xl font-bold text-center mb-12">Conoce al Team</h2>
-    <div class="grid gap-8 sm:grid-cols-2">
+  <h2 class="text-4xl font-bold text-center mb-12">Conoce al Team</h2>
+  <section class="container mx-auto px-20 my-8 grid grid-cols-2 justify-between gap-10">
+    <div class="grid gap-8 sm:grid-cols-1">
       <div class="card bg-base-100 shadow-xl">
         <div class="card-body">
           <h3 class="card-title">Olivier Paspuel</h3>
@@ -411,6 +411,8 @@
         </div>
       </div>
     </div>
+    <div class="card bg-base-100 h-fit">
+      <img src="team.png" alt="" class="" srcset="" />
+    </div>
   </section>
-
 </div>
