--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -11,7 +11,7 @@
   </div>
 
   <!-- Desktop menu in center -->
-  <div class="navbar-center hidden lg:flex">
+  <div class="navbar-end hidden lg:flex">
     <ul
       class="menu menu-horizontal gap-1 xl:gap-2 text-primary font-medium px-1"
     >
