--- a/src/app/components/team/team.html
+++ b/src/app/components/team/team.html
@@ -2,7 +2,7 @@
   <section class="text-center bg-gray-900 py-10">
     <h2 class="text-4xl font-bold m-0 text-white">Nuestra Historia</h2>
     <ul
-      class="timeline inline-flex timeline-vertical -mt-24 lg:timeline-horizontal p-8 rounded-lg"
+      class="timeline inline-flex timeline-vertical lg:-mt-24 lg:timeline-horizontal p-8 rounded-lg"
     >
       <li>
         <div class="timeline-start text-blue-300">2022</div>
@@ -112,304 +112,16 @@
   </section>
 
   <h2 class="text-4xl font-bold text-center mb-12">Conoce al Team</h2>
-  <section class="container mx-auto px-20 my-8 grid grid-cols-2 justify-between gap-10">
-    <div class="grid gap-8 sm:grid-cols-1">
-      <div class="card bg-base-100 shadow-xl">
-        <div class="card-body">
-          <h3 class="card-title">Olivier Paspuel</h3>
-          <p class="text-sm text-gray-500">CTO & CEO</p>
-          <div class="divider">Habilidades</div>
-          <div class="flex flex-wrap gap-2">
-            <div class="badge badge-primary gap-2">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path
-                  d="m12 3-1.912 5.813a2 2 0 0 1-1.275 1.275L3 12l5.813 1.912a2 2 0 0 1 1.275 1.275L12 21l1.912-5.813a2 2 0 0 1 1.275-1.275L21 12l-5.813-1.912a2 2 0 0 1-1.275-1.275L12 3Z"
-                ></path>
-                <path d="M5 3v4"></path>
-                <path d="M19 17v4"></path>
-                <path d="M3 5h4"></path>
-                <path d="M17 19h4"></path>
-              </svg>
-              JavaScript
-            </div>
-            <div class="badge badge-primary gap-2">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path
-                  d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10z"
-                ></path>
-                <path d="M8 14s1.5 2 4 2 4-2 4-2"></path>
-                <line x1="9" x2="9.01" y1="9" y2="9"></line>
-                <line x1="15" x2="15.01" y1="9" y2="9"></line>
-              </svg>
-              React
-            </div>
-            <div class="badge badge-primary gap-2">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path
-                  d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2z"
-                ></path>
-                <path d="M9 12h6"></path>
-                <path d="M12 9v6"></path>
-              </svg>
-              Node.js
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Carlos Hernández -->
-      <div class="card bg-base-100 shadow-xl">
-        <div class="card-body">
-          <h3 class="card-title">Carlos Hernández</h3>
-          <p class="text-sm text-gray-500">Data Analyst</p>
-          <div class="divider">Habilidades</div>
-          <div class="flex flex-wrap gap-2">
-            <div class="badge badge-primary gap-2">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path d="M12 2v4"></path>
-                <path d="m16.24 7.76 2.83-2.83"></path>
-                <path d="M18 12h4"></path>
-                <path d="m16.24 16.24 2.83 2.83"></path>
-                <path d="M12 18v4"></path>
-                <path d="m4.93 19.07 2.83-2.83"></path>
-                <path d="M2 12h4"></path>
-                <path d="m4.93 4.93 2.83 2.83"></path>
-              </svg>
-              Python
-            </div>
-            <div class="badge badge-primary gap-2">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path
-                  d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"
-                ></path>
-              </svg>
-              SQL
-            </div>
-            <div class="badge badge-primary gap-2">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path d="M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0z"></path>
-                <path d="M12 2v4"></path>
-                <path d="m16.24 7.76 2.83-2.83"></path>
-                <path d="M12 20v4"></path>
-                <path d="m4.93 19.07 2.83-2.83"></path>
-                <path d="M22 12h4"></path>
-                <path d="m7.76 16.24 2.83 2.83"></path>
-                <path d="M2 12h4"></path>
-                <path d="m16.24 7.76 2.83-2.83"></path>
-              </svg>
-              TensorFlow
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Antonio Revilla -->
-      <div class="card bg-base-100 shadow-xl">
-        <div class="card-body">
-          <h3 class="card-title">Antonio Revilla</h3>
-          <p class="text-sm text-gray-500">QA Tester</p>
-          <div class="divider">Habilidades</div>
-          <div class="flex flex-wrap gap-2">
-            <div class="badge badge-primary gap-2">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path
-                  d="m12 3-1.912 5.813a2 2 0 0 1-1.275 1.275L3 12l5.813 1.912a2 2 0 0 1 1.275 1.275L12 21l1.912-5.813a2 2 0 0 1 1.275-1.275L21 12l-5.813-1.912a2 2 0 0 1-1.275-1.275L12 3Z"
-                ></path>
-                <path d="M5 3v4"></path>
-                <path d="M19 17v4"></path>
-                <path d="M3 5h4"></path>
-                <path d="M17 19h4"></path>
-              </svg>
-              Selenium
-            </div>
-            <div class="badge badge-primary gap-2">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path
-                  d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10z"
-                ></path>
-                <path d="M8 14s1.5 2 4 2 4-2 4-2"></path>
-                <line x1="9" x2="9.01" y1="9" y2="9"></line>
-                <line x1="15" x2="15.01" y1="9" y2="9"></line>
-              </svg>
-              Jest
-            </div>
-            <div class="badge badge-primary gap-2">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path
-                  d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2z"
-                ></path>
-                <path d="M9 12h6"></path>
-                <path d="M12 9v6"></path>
-              </svg>
-              Cypress
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="card bg-base-100 shadow-xl">
-        <div class="card-body">
-          <h3 class="card-title">Frederick Tipán</h3>
-          <p class="text-sm text-gray-500">
-            UI/UX Designer & Frontend developer
-          </p>
-          <div class="divider">Habilidades</div>
-          <div class="flex flex-wrap gap-2">
-            <div class="badge badge-primary gap-2">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path d="M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0z"></path>
-                <path d="M12 2v4"></path>
-                <path d="m16.24 7.76 2.83-2.83"></path>
-                <path d="M12 20v4"></path>
-                <path d="m4.93 19.07 2.83-2.83"></path>
-                <path d="M22 12h4"></path>
-                <path d="m7.76 16.24 2.83 2.83"></path>
-                <path d="M2 12h4"></path>
-                <path d="m16.24 7.76 2.83-2.83"></path>
-              </svg>
-              Figma
-            </div>
-            <div class="badge badge-primary gap-2">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path
-                  d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"
-                ></path>
-              </svg>
-              Adobe XD
-            </div>
-            <div class="badge badge-primary gap-2">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path d="M12 2v4"></path>
-                <path d="m16.24 7.76 2.83-2.83"></path>
-                <path d="M18 12h4"></path>
-                <path d="m16.24 16.24 2.83 2.83"></path>
-                <path d="M12 18v4"></path>
-                <path d="m4.93 19.07 2.83-2.83"></path>
-                <path d="M2 12h4"></path>
-                <path d="m4.93 4.93 2.83 2.83"></path>
-              </svg>
-              Sketch
-            </div>
-          </div>
-        </div>
-      </div>
+  <section
+    class="container mx-auto px-20 my-8 grid grid-cols-1 md:grid-cols-2 justify-between gap-10"
+  >
+    <div class="grid gap-8 grid-cols-1">
+      <app-member
+        *ngFor="let member of teamMembers"
+        name="{{ member.name }}"
+        role="{{ member.role }}"
+        [skills]="member.skills"
+      ></app-member>
     </div>
     <div class="card bg-base-100 h-fit">
       <img src="team.png" alt="" class="" srcset="" />
