feat:ui improvementes

--- a/src/app/components/contact-us/contact-us.html
+++ b/src/app/components/contact-us/contact-us.html
@@ -23,10 +23,31 @@
         <div class="grid sm:grid-cols-2 gap-8">
           <div>
             <h4 class="text-lg font-semibold mb-3">No dudes en contactarnos</h4>
-            <div class="space-y-1">
-              <p>Av, Loja y Cantuña</p>
-              <p>(02) 395-8760</p>
-              <p>infosrmc&#64;gmail.com</p>
+            <div class="space-y-4">
+              <p>
+                <fa-icon
+                  size="lg"
+                  [icon]="faLocation"
+                  class="text-neutral-900"
+                ></fa-icon>
+                Av, Loja y Cantuña
+              </p>
+              <p>
+                <fa-icon
+                  size="lg"
+                  [icon]="faPhone"
+                  class="text-neutral-900"
+                ></fa-icon>
+                (02) 395-8760
+              </p>
+              <p>
+                <fa-icon
+                  size="lg"
+                  [icon]="faMailBulk"
+                  class="text-neutral-900"
+                ></fa-icon>
+                infosrmc&#64;gmail.com
+              </p>
             </div>
           </div>
           <div>
@@ -58,7 +79,7 @@
     <div
       class="lg:absolute lg:right-5 lg:top-24 lg:w-[40%] xl:w-[38%] 2xl:w-[35%]"
     >
-      <form class="card bg-white shadow-2xl p-12 -mt-10 lg:mt-0">
+      <form class="card bg-[FDFFFE] shadow-2xl p-12 -mt-10 lg:mt-0">
         <div class="space-y-6">
           <div class="grid sm:grid-cols-2 gap-6">
             <input
