feat: docker files added; feat: card aesthetic added to carousel

--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -30,18 +30,18 @@
     >
       Las empresas confían en nuestras soluciones
     </h3>
-    <div class="carousel carousel-vertical h-60 w-full">
+    <div class="card carousel carousel-vertical h-60 w-fit mx-auto">
       <div class="carousel-item w-full h-full">
-        <img src="hogwarts.png" class="w-full object-contain" />
+        <img src="hogwarts.png" class="w-full object-fill" />
       </div>
       <div class="carousel-item w-full h-full">
-        <img src="metro.png" class="w-full object-contain" />
+        <img src="metro.png" class="w-full object-fill" />
       </div>
       <div class="carousel-item w-full h-full">
-        <img src="2k.png" class="w-full object-contain" />
+        <img src="2k.png" class="w-full object-fill" />
       </div>
       <div class="carousel-item w-full h-full">
-        <img src="dome.png" class="w-full object-contain" />
+        <img src="dome.png" class="w-full object-fill" />
       </div>
     </div>
   </div>
